--- a/config/50-raspap-router.conf
+++ b/config/50-raspap-router.conf
@@ -1,18 +1,11 @@
-server.modules += (
-	"mod_rewrite",
-)
+#server.modules += (
+#	"mod_rewrite",
+#)
 
-$HTTP["url"] =~ "^/(?!(dist|app|ajax|config)).*" {
-#    url.rewrite-once = (
-#        "^/[^\?]*(\?.*)?" => "/index.php$1"
-#    )
-    url.rewrite-once = ( "^/(.*?)(\?.+)?$"=>"/index.php/$1?$2" )
-    server.error-handler-404 = "/index.php"
-}
-
-#the actual lines from f3 config page:
-#$HTTP["host"] =~ "www\.example\.com$" {
+#$HTTP["url"] =~ "^/(?!(dist|app|ajax|config)).*" {
 #    url.rewrite-once = ( "^/(.*?)(\?.+)?$"=>"/index.php/$1?$2" )
 #    server.error-handler-404 = "/index.php"
 #}
+
+server.error-handler-404 = "/index.html"
 
