--- a/config/hostapd.conf
+++ b/config/hostapd.conf
@@ -4,18 +4,19 @@ ctrl_interface_group=0
 beacon_int=100
 auth_algs=1
 wpa_key_mgmt=WPA-PSK
-ssid=raspi-webgui
+ssid=smartnode-admin
 channel=1
 hw_mode=g
 wpa_passphrase=ChangeMe
 interface=wlan0
 wpa=2
 wpa_pairwise=CCMP
-country_code=
+country_code=AU
 ## Rapberry Pi 3 specific to on board WLAN/WiFi
-#ieee80211n=1 # 802.11n support (Raspberry Pi 3)
-#wmm_enabled=1 # QoS support (Raspberry Pi 3)
-#ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40] # (Raspberry Pi 3)
+# mp035 enabled this for rpi0W because it has the same WiFi hardware.
+ieee80211n=1 # 802.11n support (Raspberry Pi 3)
+wmm_enabled=1 # QoS support (Raspberry Pi 3)
+ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40] # (Raspberry Pi 3)
 
 ## RaspAP wireless client AP mode
 #interface=uap0
