Returned lighttpd config back to using default php root, and edited startservice.sh to make sure the ap-sta is reassociated on start.

--- a/config/50-raspap-router.conf
+++ b/config/50-raspap-router.conf
@@ -1,11 +1,12 @@
-#server.modules += (
-#	"mod_rewrite",
-#)
+server.modules += (
+	"mod_rewrite",
+)
 
-#$HTTP["url"] =~ "^/(?!(dist|app|ajax|config)).*" {
-#    url.rewrite-once = ( "^/(.*?)(\?.+)?$"=>"/index.php/$1?$2" )
-#    server.error-handler-404 = "/index.php"
-#}
+$HTTP["url"] =~ "^/(?!(dist|app|ajax|config)).*" {
+    url.rewrite-once = ( "^/(.*?)(\?.+)?$"=>"/index.php/$1?$2" )
+    server.error-handler-404 = "/index.php"
+}
 
-server.error-handler-404 = "/index.html"
+# for vue.js interface
+#server.error-handler-404 = "/index.html"
 
